# thorlab_microscopy

./: .README.md.swp  .gitignore  README.md  env_common_fix.sh  pyproject.toml  pytest.ini  run_bioio_process_experiment.py  run_process_experiment.py
src/thorlab_loader/: __init__.py  builder.py  compare_standard_metadata.py  download_drive_folder.py  file_selection.py  infile_pattern.py  metadata.py  outfile_name.py  outfile_name_backup.py  run.sh  tiff_reader.py  tiff_writer.py  utils.py  xml_parser.py  xml_to_standard_metadata.py
src/thorlab_loader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/thorlab_loader/backends/: axis_utils.py  bioio_metadata.py  bioio_reader.py  bioio_reader_backup.py  bioio_stack_builder.py  bioio_standard_metadata.py  bioio_thorlab_builder.py  bioio_ultra_stacker.py  bioio_ultra_stacker_additional.py  bioio_ultra_stacker_backup.py  bioio_validation.py
tests/: conftest.py  pytest.ini  synthetic_tiff.py  test_builder.py  test_file_selection.py  test_gdrive_integration.py  test_integration_bioio_gdrive.py  test_integration_gdrive.py  test_integration_local_real.py  test_integration_local_real_bioio_pipeline.py  test_sanity.py  test_tiff_reader.py  test_tiff_writer.py  test_unit_output_logic.py  test_xml_parser.py
