[project]
name = "thorlab_loader"
version = "0.1.0"
description = "Thorlabs microscopy TIFF + metadata converter"
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "tifffile",
    "lxml",
    "pandas",
    "matplotlib",
    "requests",
    "imagecodecs",
    "gdown>=5.0.0",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["thorlab_loader"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

